[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/OnlineLobby.gd" type="Script" id=1]
[ext_resource path="res://Assets/static/Inter-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/OnlineGameUI.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 3 )

[node name="OnlineLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 162, -142 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 453.0
margin_top = 293.0
margin_right = 571.0
margin_bottom = 307.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 118.0
margin_bottom = 14.0
text = "PLAYERS IN GAME:"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_bottom = 217.0

[node name="Label" type="Label" parent="CenterContainer2"]
margin_left = 319.0
margin_top = 77.0
margin_right = 704.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 2 )
text = "grabble: LOBBY"

[node name="CenterContainer3" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -163.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer3"]
margin_left = 433.0
margin_top = 30.0
margin_right = 590.0
margin_bottom = 132.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer3/VBoxContainer"]
margin_right = 157.0
margin_bottom = 14.0
text = "disabled = not host"
align = 1
valign = 1

[node name="Server" type="Button" parent="CenterContainer3/VBoxContainer"]
margin_top = 24.0
margin_right = 157.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "START GAME"

[node name="Leave" type="Button" parent="CenterContainer3/VBoxContainer"]
margin_top = 68.0
margin_right = 157.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 3 )
text = "LEAVE GAME"

[node name="OnlineGameUI" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="CenterContainer3/VBoxContainer/Server" to="." method="_on_Server_pressed"]
[connection signal="pressed" from="CenterContainer3/VBoxContainer/Leave" to="." method="_on_Leave_pressed"]
